--- a/exam/src/main/resources/application.properties
+++ b/exam/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 spring.application.name=exam
-spring.datasource.url=jdbc:postgresql://localhost:5428/exam
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://exam.c5cica2oo5z3.eu-north-1.rds.amazonaws.com:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Roll.123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+#spring.application.name=exam
+#spring.datasource.url=jdbc:postgresql://localhost:5428/exam
+#spring.datasource.username=admin
+#spring.datasource.password=admin
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
